[package]
name = "reploy-server"
version = "0.1.0"
authors = ["Maya Farber Brodsky <maya@farberbrodsky.com>", "Misha Farber Brodsky <misha@farberbrodsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

message_protocol = "0.1.1"